Added user management module
