# middleware/authMiddleware.js
@@ -1,0 +1,13 @@
+const jwt = require("jsonwebtoken");
+
+exports.Authorize = async (req, res, next) => {
+    try {
+        const token = req.headers.authorization.split(" ")[1];
+        const decoded = jwt.verify(token, process.env.JWT_SECRET);
+        req.userId = decoded.id;
+        next();
+    } catch (error) {
+        console.error(error);
+        res.status(401).send("Unauthorized");
+    }
+}
